test-cases/negative/test_146_class_property_without_type.lay
# negative test: class property declaration without type
# expected: parser should reject this

define class Person
  the property name


